# AutoHarness

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  traces.txt
src/: AGENTS.md  main.rs
src/prompts/: chat_system.txt  doc_system.txt  evolve_system.txt  reflect_system.txt
