[package]
name = "auto-harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auto-harness"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
eframe = "0.29"
